--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
-Django>=4.0
-django-cors-headers
-djangorestframework
+asgiref==3.11.0
+Django==5.2.8
+django-cors-headers==4.9.0
+djangorestframework==3.16.1
+gunicorn==23.0.0
+packaging==25.0
+sqlparse==0.5.4
+tzdata==2025.2
